--- a/armv7hf/Dockerfile
+++ b/armv7hf/Dockerfile
@@ -2,7 +2,7 @@ FROM resin/armv7hf-toolchain
 
 # Install deps
 RUN apt-get -q update \
-		&& apt-get install -y python-pip --no-install-recommends \
+		&& apt-get install -y python-pip gcc-multilib g++-multilib --no-install-recommends \
 		&& apt-get clean \
 		&& rm -rf /var/lib/apt/lists/*
 
