--- a/armv7hf/Dockerfile
+++ b/armv7hf/Dockerfile
@@ -1,7 +1,7 @@
 FROM resin/armv7hf-debian:latest
 
 RUN apt-get -q update \
-		&& apt-get install -y git python python-dev build-essential wget ca-certificates libssl-dev --no-install-recommends \
+		&& apt-get install -y git python python-dev python-pip build-essential wget ca-certificates libssl-dev --no-install-recommends \
 		&& apt-get clean \
 		&& rm -rf /var/lib/apt/lists/*
 
