Add curl package to build deps

--- a/armv6hf/Dockerfile
+++ b/armv6hf/Dockerfile
@@ -2,7 +2,7 @@ FROM ubuntu:14.04
 
 # Install deps
 RUN apt-get -q update \
-		&& apt-get install -y git lib32stdc++6 python python-pip build-essential lib32z1 wget ca-certificates gcc-multilib g++-multilib --no-install-recommends \
+		&& apt-get install -y git lib32stdc++6 python python-pip build-essential lib32z1 wget ca-certificates gcc-multilib g++-multilib curl --no-install-recommends \
 		&& apt-get clean \
 		&& rm -rf /var/lib/apt/lists/*
 
