Compile binary on wheezy image to make sure the binaries will be compatible with wheezy base images

--- a/armv7hf/Dockerfile
+++ b/armv7hf/Dockerfile
@@ -1,4 +1,4 @@
-FROM resin/armv7hf-debian:latest
+FROM resin/armv7hf-debian:wheezy
 
 RUN apt-get -q update \
 		&& apt-get install -y git python python-dev python-pip build-essential wget ca-certificates libssl-dev curl --no-install-recommends \
