--- a/debian/aarch64/Dockerfile
+++ b/debian/aarch64/Dockerfile
@@ -1,4 +1,4 @@
-FROM resin/aarch64-debian:latest
+FROM resin/aarch64-debian:#{SUITE}
 
 RUN apt-get -q update \
 		&& apt-get install -y git python python-dev python-pip build-essential wget ca-certificates libssl-dev curl --no-install-recommends \
