--- a/debian/aarch64/Dockerfile
+++ b/debian/aarch64/Dockerfile
@@ -1,7 +1,7 @@
 FROM balenalib/aarch64-debian:#{SUITE}
 
 RUN apt-get -q update \
-		&& apt-get install -y git python python-dev python-pip build-essential wget ca-certificates libssl-dev curl --no-install-recommends \
+		&& apt-get install -y git python python-dev python-pip python-setuptools build-essential wget ca-certificates libssl-dev curl --no-install-recommends \
 		&& apt-get clean \
 		&& rm -rf /var/lib/apt/lists/*
 
