--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -16,6 +16,7 @@ on:
         options:
           - debian
           - alpine
+        default: alpine
       arch:
         description: Arch
         required: true
@@ -30,17 +31,12 @@ on:
         description: Node version
         required: true
         type: string
-      no-intl:
-        description: 'Build with --with-intl=none'
-        required: false
-        type: boolean
-        default: false
 
 env:
-  DISTRO: ${{ inputs.distro || 'debian' }}
+  DISTRO: ${{ inputs.distro || 'alpine' }}
   ARCH: ${{ inputs.arch || 'aarch64' }}
   NODE_VERSION: ${{ inputs.node-version || '19.6.1' }}
-  NONE_INTL: ${{ inputs.no-intl || '' }}
+  BUCKET_NAME: ${{ vars.BUCKET_NAME || 'resin-packages' }}
 
 permissions:
   actions: read
@@ -80,38 +76,65 @@ jobs:
 
       # TODO: use self-hosted amd64/arm64 runners instead of QEMU
       # https://github.com/docker/setup-qemu-action
-      - name: Setup QEMU
-        uses: docker/setup-qemu-action@68827325e0b33c7199eb31dd4e31fbe9023e06e3 # v3.0.0
-        env:
-          LOG_LEVEL: debug
-          # renovate: datasource=docker depName=binfmt packageName=tonistiigi/binfmt
-          BINFMT_VERSION: qemu-v8.0.4-33
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v3
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
+      # https://github.com/docker/build-push-action
+      - name: Build node from source
+        uses: docker/build-push-action@v5
         with:
-          # https://hub.docker.com/r/tonistiigi/binfmt
-          image: tonistiigi/binfmt:${{ env.BINFMT_VERSION }}
+          push: false
+          context: .
+          target: output
+          outputs: type=local,dest=out
+          cache-to: type=gha,mode=max,scope=${{ env.DISTRO }}-${{ env.ARCH }}-${{ env.NODE_VERSION }}
+          cache-from: type=gha,scope=${{ env.DISTRO }}-${{ env.ARCH }}-${{ env.NODE_VERSION }}
+          build-args: |
+            DISTRO=${{ env.DISTRO }}
+            BALENA_ARCH=${{ env.ARCH }}
+            NODE_VERSION=${{ env.NODE_VERSION }}
 
-      # FIXME: this is insecure as the helper image is built from untrusted user code
-      - name: Build helper image
-        working-directory: ${{ env.DISTRO }}/${{ env.ARCH }}
+      # https://github.com/unfor19/install-aws-cli-action
+      - name: setup awscli
+        uses: unfor19/install-aws-cli-action@v1
+
+      - name: s3 copy
         run: |
-          cp -f ../../commit-table .
-          sed -e s~#{SUITE}~buster~g Dockerfile.tpl > Dockerfile
-          docker build --no-cache=true -t "node-$DISTRO-$ARCH-builder" .
-
-      - name: Build and publish binaries
-        # # do not deploy on pull requests
-        # if: github.event_name != 'pull_request'
-        working-directory: ${{ env.DISTRO }}/${{ env.ARCH }}
+          curl -SLO "http://resin-packages.s3.amazonaws.com/SHASUMS256.txt"
+          sha256sum *.tar.gz >> SHASUMS256.txt \
+          aws s3 cp *.tar.gz "s3://$BUCKET_NAME/node/v$NODE_VERSION/"
+          aws s3 cp SHASUMS256.txt "s3://$BUCKET_NAME/"
         env:
-          BUCKET_NAME: ${{ vars.BUCKET_NAME || 'balena-packages' }}
           AWS_ACCESS_KEY_ID: ${{ steps.creds.outputs.aws-access-key-id }}
           AWS_SECRET_ACCESS_KEY: ${{ steps.creds.outputs.aws-secret-access-key }}
           AWS_SESSION_TOKEN: ${{ steps.creds.outputs.aws-session-token }}
-        run: |
-          docker run --rm \
-            -e AWS_ACCESS_KEY_ID \
-            -e AWS_SECRET_ACCESS_KEY \
-            -e AWS_SESSION_TOKEN \
-            -e BUCKET_NAME \
-            -e NONE_INTL \
-            "node-$DISTRO-$ARCH-builder" bash build.sh $NODE_VERSION
+          AWS_DEFAULT_REGION: ${{ vars.AWS_DEFAULT_REGION || 'us-east-1' }}
+
+      # # FIXME: this is insecure as the helper image is built from untrusted user code
+      # - name: Build helper image
+      #   working-directory: ${{ env.DISTRO }}/${{ env.ARCH }}
+      #   run: |
+      #     cp -f ../../commit-table .
+      #     sed -e s~#{SUITE}~buster~g Dockerfile.tpl > Dockerfile
+      #     docker build --no-cache=true -t "node-$DISTRO-$ARCH-builder" .
+
+      # - name: Build and publish binaries
+      #   # # do not deploy on pull requests
+      #   # if: github.event_name != 'pull_request'
+      #   working-directory: ${{ env.DISTRO }}/${{ env.ARCH }}
+      #   env:
+      #     BUCKET_NAME: ${{ vars.BUCKET_NAME || 'balena-packages' }}
+      #     AWS_ACCESS_KEY_ID: ${{ steps.creds.outputs.aws-access-key-id }}
+      #     AWS_SECRET_ACCESS_KEY: ${{ steps.creds.outputs.aws-secret-access-key }}
+      #     AWS_SESSION_TOKEN: ${{ steps.creds.outputs.aws-session-token }}
+      #   run: |
+      #     docker run --rm \
+      #       -e AWS_ACCESS_KEY_ID \
+      #       -e AWS_SECRET_ACCESS_KEY \
+      #       -e AWS_SESSION_TOKEN \
+      #       -e BUCKET_NAME \
+      #       -e NONE_INTL \
+      #       "node-$DISTRO-$ARCH-builder" bash build.sh $NODE_VERSION
