Test with architecture armv6hf on pull requests
Signed-off-by: Kyle Harding <kyle@balena.io>

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -34,7 +34,7 @@ on:
 
 env:
   DISTRO: ${{ inputs.distro || 'alpine' }}
-  ARCH: ${{ inputs.arch || 'aarch64' }}
+  ARCH: ${{ inputs.arch || 'armv6hf' }}
   NODE_VERSION: ${{ inputs.node-version || '19.6.1' }}
   BUCKET_NAME: ${{ vars.BUCKET_NAME || 'resin-packages' }}
 
