Clone nodejs/node in workflow and copy to build context
The git client seems unreliable when cloning on armv6hf
so stick to native tools for the clone.

Change-type: patch
Signed-off-by: Kyle Harding <kyle@balena.io>

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -90,8 +90,17 @@ jobs:
 
     steps:
       # https://github.com/actions/checkout
-      - name: Checkout
+      - name: Checkout node-arm
         uses: actions/checkout@v4.1.1
+
+      # https://github.com/actions/checkout
+      - name: Checkout nodejs/node
+        uses: actions/checkout@v4.1.1
+        with:
+          repository: nodejs/node
+          ref: v${{ env.NODE_VERSION }}
+          fetch-depth: 1
+          path: node
 
       # https://github.com/aws-actions/configure-aws-credentials
       - name: Configure AWS credentials
