--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -92,6 +92,8 @@ jobs:
       # https://github.com/actions/checkout
       - name: Checkout
         uses: actions/checkout@v4.1.1
+        with:
+          persist-credentials: false
 
       # https://github.com/aws-actions/configure-aws-credentials
       - name: Configure AWS credentials
